添加判定仓库是否远程功能
