# swagger/swagger.json
@@ -15,6 +15,42 @@
     "basePath": "/v1/appstore",
     "paths": {
         "/store/repo/{repo}/group/{group}": {
+            "get": {
+                "tags": [
+                    "store"
+                ],
+                "description": "获取指定组指定仓库信息",
+                "operationId": "StoreController.仓库",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "Token",
+                        "description": "'Token'",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "group",
+                        "description": "组名",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "repo",
+                        "description": "仓库",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{string}  success!"
+                    },
+                    "500": {}
+                }
+            },
             "delete": {
                 "tags": [
                     "store"
@@ -296,6 +332,7 @@
                 "tags": [
                     "store"
                 ],
+                "description": "获取所有组所有仓库信息",
                 "operationId": "StoreController.仓库",
                 "responses": {
                     "201": {
